# ChainOfMicroservices

./: README.md  appveyor.yml  compose.yaml
documentation/: Microservices.postman_collection.json
microservices/: list of languages.txt
microservices/csharp/: .dockerignore  .gitignore  CSharpApi.sln  Dockerfile
microservices/csharp/src/: Api.csproj  Message.cs  Program.cs  appsettings.Development.json  appsettings.json
microservices/csharp/src/Controllers/: MessageController.cs
microservices/csharp/src/Properties/: launchSettings.json
microservices/csharp/src/Services/: IMessageService.cs  MessageService.cs
microservices/java/JavaApi/: pom.xml
microservices/java/_JavaApi/srcold/: Main.java
microservices/java/__JavaApi/: pom.xml
microservices/javascript/: .dockerignore  .gitignore  Dockerfile  config.json  index.js  package-lock.json  package.json
microservices/javascript/src/: status.js
microservices/javascript/src/controllers/: apiController.js  healthController.js  (+1 more)
microservices/python/: Dockerfile  app.py  config.py  message_delivery_service.py  requirements.txt  service.py
microservices/python/src/: app.py  config.py  message_delivery_service.py  status.py
microservices/rust/: .gitignore  Cargo.toml  Dockerfile
microservices/rust/config/: default.json  test.json
microservices/rust/src/: config.rs  main.rs
microservices/rust/src/api/: errors.rs  health.rs  message.rs  mod.rs
microservices/rust/src/models/: message.rs  mod.rs  status.rs
microservices/rust/src/services/: messageDeliveryService.rs  message_delivery_service.rs  mod.rs
(+8 files in other folders)
